fix wrapping issues with alternative rows
fix issues where long text would cause the text in alternative rows to
wrap weirdly.

--- a/src/alternatives-panel.scss
+++ b/src/alternatives-panel.scss
@@ -83,5 +83,9 @@ a.btn:hover {
         &.suggestion {
             opacity: 0.5 !important;
         }
+
+        pre {
+            margin-left: 5px !important;
+        }
     }
 }
